--- a/publications.html
+++ b/publications.html
@@ -26,7 +26,7 @@
             <div class="h-center flex">
                 <h2>Multidimentional nanospectroscopy laboratory </h2>
             </div>
-            <div class="h-right">
+            <div class="h-right flex">
                 <img src="img/group.png" alt="">
                 <div class="btn_box">
                     <img src="img/earth_icon.png" alt="">
@@ -51,69 +51,98 @@
         <img src="img/banner.png" />
     </div>
 
-    <div class="publacations wrap_box">
-        <nav>
-            <ul>
-                <li>2023</li>
-                <li>2022</li>
-                <li>2021</li>
-                <li>2020</li>
-                <li>2019</li>
-                <li>Before</li>
+    <div class="main wrap_box">
+        <div class="publications clearfix">
+            <ul class="publications_nav">
+                <li><a href="">2023</a></li>
+                <li><a href="">2022</a></li>
+                <li><a href="">2021</a></li>
+                <li><a href="">2020</a></li>
+                <li><a href="">2019</a></li>
+                <li><a href="">Before</a></li>
             </ul>
-        </nav>
-        <div class="content_list">
-            <dl>
-                <dt>2022</dt>
-                <dd>
-                    You, X., Baiz, C. R. <a href="">“Importance of Hydrogen Bonding in Crowded Environments: A Physical Chemistry Perspective”.</a> J. Phys. Chem. A, 2022, 126 (35), 5881-5889.
-                </dd>
-                <dd>
-                    You, X., Thakur, N., Ray, A. P., Eddy, M. T., Baiz, C. R. <a href="">“A comparative study of interfacial environments in lipid nanodiscs and vesicles”.</a> Biophys. Rep., 2022, 2(3), 100066.
-                </dd>
-                <dd>Lee, E., You, X., C. R. <a href="">“Interfacial dynamics in inverted-headgroup lipid membranes.”</a> Chem. Phys., 2022, 156(7), 075102.</dd>
-            </dl>
-            <dl>
-                <dt>2021</dt>
-                <dd>
-                    You, X., Lee, E., Xu, C., Baiz, CR. <a href="">“Molecular Mechanism of Cell Membrane Protection by Sugars: A Study of Interfacial H-bond Networks”,</a> J. Phys. Chem. Lett., 2021, 12, 39, 9602–9607
-                </dd>
-                <dd>
-                    You, X., Shirley, JC., Lee, E., Baiz, CR. <a href="">“Short- and Long-range Crowding Effects on Water’s Hydrogen Bond Networks”.</a> Cell Rep. Physical Science., 2021, 2(5):100419.
-                </dd>
-            </dl>
-            <dl>
-                <dt>2020</dt>
-                <dd>
-                    You, X., Oh, K. I., Flanagan, J. C., Baiz, C. R., <a href="">“Liquid-Liquid Phase Separation Produces Fast H-Bond Dynamics in DMSO-Water Mixtures”,</a> J. Phys. Chem. Lett., 2020, 11, 1903-1908.
-                </dd>
-                <dd>
-                    You, X., Casper, C.B., Lentz, E., Erie, D. A., Atkin, J.M., <a href="">“Fabrication of a Biocompatible Mica/Gold Surface for Tip-Enhanced Raman Spectroscopy”,</a> ChemPhysChem, 2020, 21, 188.
-                </dd>
-            </dl>
-            <dl>
-                <dt>2019</dt>
-                <dd>
-                    Huang, C.W., You, X., Diemer, P.J., Petty, A.J., Anthony, J.E., Jurchescu, O.D. and Atkin, J.M., <a href="">“Micro-Raman imaging of isomeric segregation in small-molecule organic semiconductors”,</a> Commun. Chem., 2019. 2(1), pp.1- 7.
-                </dd>
-            </dl>
-            <dl>
-                <dt>Before</dt>
-                <dd>
-                    McAfee, T.; Hoffman, B. C.; You, X.; Atkin, J. M.; Ade, H.; Dougherty, D. B., “Morphological, Optical, and Electronic Consequences of Coexisting Crystal Orientations in beta-Copper Phthalocyanine Thin Films”. J. Phys. Chem. C, 2016, 120 (33), 18616-18621.
-                </dd>
-                <dd>
-                    Sun, H., Jiang, Y., Qiu, L., You, X., et al and Peng, H., <a href="">“Energy harvesting and storage devices fused into various patterns”</a> J. Mater. Chem. A, 2015,3, 14977-14984
-                </dd>
-                <dd>You, X., Sun, X. and Peng, H. <a href="">“Aligned Carbon Nabotube Fiber for Energy conversion and Storage”</a> Mater. China. 2014, 08-0696-04, 1674-3962.</dd>
-                <dd>Sun, H., You, X., Jiang, Y. and Peng, H. <a href="">"Self-healable Electrically Conducting Wire for Wearable Micro-Electronics"</a> Angew. Chem. Int. Ed. 2014, 53(36), 9526-9531.</dd>
-                <dd>Sun, H., You, X., Deng, J., Chen, X., Yang, Z.; Peng, H. <a href="">"Novel Graphene/Carbon Nanotube Composite Fibers for Efficient Wire-Shaped Miniature Energy Devices."</a> Adv. Mater. 2014, 26(18), 2868-2873.</dd>
-                <dd>Sun, H.; You, X.; Deng, J.; Chen, X.; Yang, Z.; Chen, P.; Peng, H. <a href="">“A Twisted Wire-shaped Energy Device with Dual Functions of Photoelectric Conversion and Electrochemical Storage”</a>, Angew. Chem. Int. Ed. 2014, 126(26), 6782-6786.</dd>
-                <dd>Sun, H., Che, R., You, X., Jiang, Y., Yang, Z., Deng, J., Qiu, L., Peng, H. <a href="">"Cross-stacking aligned carbon-nanotube films to tune microwave absorption frequencies and increase absorption intensities."</a> Adv. Mater., 2014, 26, 8120-8125.</dd>
-                <dd>Sun, H.; Li, H.; You, X.; Yang, Z.; Peng, H. “Quasi-Solid-State, Coaxial, Fiber-Shaped Dye-Sensitized Solar Cells”, J. Mater. Chem. A. 2014, 2, 345-349.</dd>
-                <dd>Sun, H., You, X., Yang, Z., Deng, J. and Peng, H. <a href="">“Winding Ultrathin, Transparent, and Electrically Conductive Carbon Nanotube Sheet into High-Performance Fiber-Shaped Dye-Sensitized Solar Cell"</a>. J. Mater. Chem. A, 2013, 1, 12422- 12425.</dd>
-                <dd>Sun, H., Yang, Z., Chen, X., Qiu, L., You, X., Chen, P. and Peng, H. <a href="">“Photovoltaic Wire with High Efficiency Attached onto and Detached from a Substrate Using a Magnetic Field”</a>. Angew. Chem. Int. Ed., 2013, 52, 8276-8280.</dd>
-            </dl>
+            <div class="content_list">
+                <dl>
+                    <dt>2022</dt>
+                    <dd>
+                        You, X., Baiz, C. R. <a href="">“Importance of Hydrogen Bonding in Crowded Environments: A
+                            Physical Chemistry Perspective”.</a> J. Phys. Chem. A, 2022, 126 (35), 5881-5889.
+                    </dd>
+                    <dd>
+                        You, X., Thakur, N., Ray, A. P., Eddy, M. T., Baiz, C. R. <a href="">“A comparative study of
+                            interfacial environments in lipid nanodiscs and vesicles”.</a> Biophys. Rep., 2022, 2(3),
+                        100066.
+                    </dd>
+                    <dd>Lee, E., You, X., C. R. <a href="">“Interfacial dynamics in inverted-headgroup lipid
+                            membranes.”</a> Chem. Phys., 2022, 156(7), 075102.</dd>
+                </dl>
+                <dl>
+                    <dt>2021</dt>
+                    <dd>
+                        You, X., Lee, E., Xu, C., Baiz, CR. <a href="">“Molecular Mechanism of Cell Membrane Protection
+                            by Sugars: A Study of Interfacial H-bond Networks”,</a> J. Phys. Chem. Lett., 2021, 12, 39,
+                        9602–9607
+                    </dd>
+                    <dd>
+                        You, X., Shirley, JC., Lee, E., Baiz, CR. <a href="">“Short- and Long-range Crowding Effects on
+                            Water’s Hydrogen Bond Networks”.</a> Cell Rep. Physical Science., 2021, 2(5):100419.
+                    </dd>
+                </dl>
+                <dl>
+                    <dt>2020</dt>
+                    <dd>
+                        You, X., Oh, K. I., Flanagan, J. C., Baiz, C. R., <a href="">“Liquid-Liquid Phase Separation
+                            Produces Fast H-Bond Dynamics in DMSO-Water Mixtures”,</a> J. Phys. Chem. Lett., 2020, 11,
+                        1903-1908.
+                    </dd>
+                    <dd>
+                        You, X., Casper, C.B., Lentz, E., Erie, D. A., Atkin, J.M., <a href="">“Fabrication of a
+                            Biocompatible Mica/Gold Surface for Tip-Enhanced Raman Spectroscopy”,</a> ChemPhysChem,
+                        2020, 21, 188.
+                    </dd>
+                </dl>
+                <dl>
+                    <dt>2019</dt>
+                    <dd>
+                        Huang, C.W., You, X., Diemer, P.J., Petty, A.J., Anthony, J.E., Jurchescu, O.D. and Atkin, J.M.,
+                        <a href="">“Micro-Raman imaging of isomeric segregation in small-molecule organic
+                            semiconductors”,</a> Commun. Chem., 2019. 2(1), pp.1- 7.
+                    </dd>
+                </dl>
+                <dl>
+                    <dt>Before</dt>
+                    <dd>
+                        McAfee, T.; Hoffman, B. C.; You, X.; Atkin, J. M.; Ade, H.; Dougherty, D. B., “Morphological,
+                        Optical, and Electronic Consequences of Coexisting Crystal Orientations in beta-Copper
+                        Phthalocyanine Thin Films”. J. Phys. Chem. C, 2016, 120 (33), 18616-18621.
+                    </dd>
+                    <dd>
+                        Sun, H., Jiang, Y., Qiu, L., You, X., et al and Peng, H., <a href="">“Energy harvesting and
+                            storage devices fused into various patterns”</a> J. Mater. Chem. A, 2015,3, 14977-14984
+                    </dd>
+                    <dd>You, X., Sun, X. and Peng, H. <a href="">“Aligned Carbon Nabotube Fiber for Energy conversion
+                            and Storage”</a> Mater. China. 2014, 08-0696-04, 1674-3962.</dd>
+                    <dd>Sun, H., You, X., Jiang, Y. and Peng, H. <a href="">"Self-healable Electrically Conducting Wire
+                            for Wearable Micro-Electronics"</a> Angew. Chem. Int. Ed. 2014, 53(36), 9526-9531.</dd>
+                    <dd>Sun, H., You, X., Deng, J., Chen, X., Yang, Z.; Peng, H. <a href="">"Novel Graphene/Carbon
+                            Nanotube Composite Fibers for Efficient Wire-Shaped Miniature Energy Devices."</a> Adv.
+                        Mater. 2014, 26(18), 2868-2873.</dd>
+                    <dd>Sun, H.; You, X.; Deng, J.; Chen, X.; Yang, Z.; Chen, P.; Peng, H. <a href="">“A Twisted
+                            Wire-shaped Energy Device with Dual Functions of Photoelectric Conversion and
+                            Electrochemical Storage”</a>, Angew. Chem. Int. Ed. 2014, 126(26), 6782-6786.</dd>
+                    <dd>Sun, H., Che, R., You, X., Jiang, Y., Yang, Z., Deng, J., Qiu, L., Peng, H. <a
+                            href="">"Cross-stacking aligned carbon-nanotube films to tune microwave absorption
+                            frequencies and increase absorption intensities."</a> Adv. Mater., 2014, 26, 8120-8125.</dd>
+                    <dd>Sun, H.; Li, H.; You, X.; Yang, Z.; Peng, H. “Quasi-Solid-State, Coaxial, Fiber-Shaped
+                        Dye-Sensitized Solar Cells”, J. Mater. Chem. A. 2014, 2, 345-349.</dd>
+                    <dd>Sun, H., You, X., Yang, Z., Deng, J. and Peng, H. <a href="">“Winding Ultrathin, Transparent,
+                            and Electrically Conductive Carbon Nanotube Sheet into High-Performance Fiber-Shaped
+                            Dye-Sensitized Solar Cell"</a>. J. Mater. Chem. A, 2013, 1, 12422- 12425.</dd>
+                    <dd>Sun, H., Yang, Z., Chen, X., Qiu, L., You, X., Chen, P. and Peng, H. <a href="">“Photovoltaic
+                            Wire with High Efficiency Attached onto and Detached from a Substrate Using a Magnetic
+                            Field”</a>. Angew. Chem. Int. Ed., 2013, 52, 8276-8280.</dd>
+                </dl>
+            </div>
         </div>
     </div>
 
