--- a/researchList.html
+++ b/researchList.html
@@ -51,59 +51,61 @@
         <img src="img/banner.png" />
     </div>
 
-    <div class="research wrap_box">
-        <div class="title_box">
-            <h3>Research Focuses</h3>
-            <div>Our focus is on unraveling the mysteries of surface structures of liquids.</div>
+    <div class="main">
+        <div class="researchList wrap_box">
+            <div class="title_box">
+                <h3 class="title">Research Focuses</h3>
+                <div>Our focus is on unraveling the mysteries of surface structures of liquids.</div>
+            </div>
+            
+            <ul class="content_list">
+                <li>
+                    <div class="item_l">
+                        <img src="images/research/img1.png" alt="">
+                    </div>
+                    <div class="item_r">
+                        <p>Solvation Structure and molecular interactions at Lipid-Water Interfaces Studied Through Vibrational Spectroscopy</p>
+                        <a href="">Learn more</a>
+                    </div>
+                </li>
+                <li>
+                    <div class="item_l">
+                        <img src="images/research/img2.png" alt="">
+                    </div>
+                    <div class="item_r">
+                        <p>The distinctive feature of liquid water is its extended H-bond network. Explore the multiscale dynamics of water linked to different water motions.</p>
+                        <a href="">Learn more</a>
+                    </div>
+                </li>
+                <li>
+                    <div class="item_l">
+                        <img src="images/research/img3.png" alt="">
+                    </div>
+                    <div class="item_r">
+                        <p>Exploring the Ultrafast Dynamics of Water in both in both bulk solution, biological interfaces and liquid-liquid phase separation systems</p>
+                        <a href="">Learn more</a>
+                    </div>
+                </li>
+                <li>
+                    <div class="item_l">
+                        <img src="images/research/img4.png" alt="">
+                    </div>
+                    <div class="item_r">
+                        <p>Leveraging TERS based chemical mapping for the investigation of the self-reduction process of graphene oxide, with improved spatially resolution and spectral...</p>
+                        <a href="">Learn more</a>
+                    </div>
+                </li>
+                <li>
+                    <div class="item_l">
+                        <img src="images/research/img5.png" alt="">
+                    </div>
+                    <div class="item_r">
+                        <p>Ultrafast Dynamics at Lipid-Water Interfaces</p>
+                        <a href="">Learn more</a>
+                    </div>
+                </li>
+            </ul>
         </div>
-        
-        <ul class="content_list">
-            <li>
-                <div>
-                    <img src="images/research/img1.png" alt="">
-                </div>
-                <div>
-                    <p>Solvation Structure and molecular interactions at Lipid-Water Interfaces Studied Through Vibrational Spectroscopy</p>
-                    <a href="">Learn more</a>
-                </div>
-            </li>
-            <li>
-                <div>
-                    <img src="images/research/img2.png" alt="">
-                </div>
-                <div>
-                    <p>The distinctive feature of liquid water is its extended H-bond network. Explore the multiscale dynamics of water linked to different water motions.</p>
-                    <a href="">Learn more</a>
-                </div>
-            </li>
-            <li>
-                <div>
-                    <img src="images/research/img3.png" alt="">
-                </div>
-                <div>
-                    <p>Exploring the Ultrafast Dynamics of Water in both in both bulk solution, biological interfaces and liquid-liquid phase separation systems</p>
-                    <a href="">Learn more</a>
-                </div>
-            </li>
-            <li>
-                <div>
-                    <img src="images/research/img4.png" alt="">
-                </div>
-                <div>
-                    <p>Leveraging TERS based chemical mapping for the investigation of the self-reduction process of graphene oxide, with improved spatially resolution and spectral...</p>
-                    <a href="">Learn more</a>
-                </div>
-            </li>
-            <li>
-                <div>
-                    <img src="images/research/img5.png" alt="">
-                </div>
-                <div>
-                    <p>Ultrafast Dynamics at Lipid-Water Interfaces</p>
-                    <a href="">Learn more</a>
-                </div>
-            </li>
-        </ul>
     </div>
 
     <footer>
