--- a/openings.html
+++ b/openings.html
@@ -51,7 +51,7 @@
         <img src="img/banner.png" />
     </div>
 
-    <div class="openings wrap_box">
+    <div class="openings pt90 wrap_box">
         <h3>Join Us</h3>
         <div class="join_us">
             <div class="join_us_l">
