--- a/people.html
+++ b/people.html
@@ -51,145 +51,169 @@
         <img src="img/banner.png" />
     </div>
 
-    <div class="people wrap_box">
-        <div class="personal_info">
-            <p>Xiao YOU, Ph.D.</p>
-            <p>School of Engineering</p>
-            <p>Center for Synthetic Biology</p>
-            <p>Multi-dimensional Nanospectroscopy laboratory</p>
-            <div class="contact">
-                <p>CONTACT</p>
-                <p>Email: youxiao@westlake.edu.cn</p>
+    <div class="people main pt90">
+        <div class="wrap_box">
+            <div class="personal_info">
+                <p>Xiao YOU, Ph.D.</p>
+                <p>School of Engineering</p>
+                <p>Center for Synthetic Biology</p>
+                <p>Multi-dimensional Nanospectroscopy laboratory</p>
+                <div class="contact">
+                    <p>CONTACT</p>
+                    <p>Email: youxiao@westlake.edu.cn</p>
+                </div>
+                <img src="images/people/yx.png" alt="">
+                <div>“Resonance, the utmost elegance. Like light, people too find beauty in resonance. Gathered at
+                    Westlake University,just as light resonates, we, the people, converge. Like the resonance of light,
+                    hearts resonate among us.”</div>
+                <div>
+                    <div>Biography</div>
+                    <p>Xiao You, with a Bachelor's degree in Macromolecular Science and Engineering from Fudan
+                        University in 2014, achieved a Ph.D. in Materials Science from the University of North Carolina
+                        at Chapel Hill in 2019. Following her doctoral studies, she pursued postdoctoral research at the
+                        University of Texas at Austin fror 2019 to 2022 and subsequently at SLAC National Accelerator
+                        Laboratory's Stanford Synchrotron Radiation Lightsource from 2022 to 2023. In 2023, Xiao You
+                        joined Westlake University and established the Multidimensional Nanospectroscopy laboratory. Her
+                        research interests encompass the formation of macromolecular biocondensates, nano-scale
+                        structural heterogeneity in functional materials, and the ultrafast dynamics in liquid systems.
+                    </p>
+                </div>
+                <div>
+                    <div>Hobbies</div>
+                    <p>Besides scientific research, You Xiao like to play badminton, rock climbing, hiking and other
+                        outdoor sports</p>
+                </div>
             </div>
-            <img src="images/people/yx.png" alt="">
-            <div>“Resonance, the utmost elegance. Like light, people too find beauty in resonance. Gathered at Westlake University,just as light resonates, we, the people, converge. Like the resonance of light, hearts resonate among us.”</div>
-            <div>
-                <div>Biography</div>
-                <p>Xiao You, with a Bachelor's degree in Macromolecular Science and Engineering from Fudan University in 2014, achieved a Ph.D. in Materials Science from the University of North Carolina at Chapel Hill in 2019. Following her doctoral studies, she pursued postdoctoral research at the University of Texas at Austin fror 2019 to 2022 and subsequently at SLAC National Accelerator Laboratory's Stanford Synchrotron Radiation Lightsource from 2022 to 2023. In 2023, Xiao You joined Westlake University and established the Multidimensional Nanospectroscopy laboratory. Her research interests encompass the formation of macromolecular biocondensates, nano-scale structural heterogeneity in functional materials, and the ultrafast dynamics in liquid systems.</p>
+            <div class="current_member">
+                <div>Current Members</div>
+                <ul>
+                    <li>
+                        <div>
+                            <img src="images/people/zyx.png" alt="">
+                        </div>
+                        <div>
+                            <div>
+                                <div>
+                                    <p>YunXiu Zhao</p>
+                                    <p>Postdoctoral Fellow</p>
+                                    <p>zhaoyunxiu@westlake.edu.cn</p>
+                                </div>
+                                <ul>
+                                    <li>Ph.D. Chungbuk National University, 2023</li>
+                                    <li>M.S. China Three Gorges University, 2018</li>
+                                    <li>B.S. Northwest Normal University, 2010</li>
+                                </ul>
+                            </div>
+                            <div>My main project is currently working on chiral biomolecular induced spin selective, I
+                                love watching movies, and reading books.</div>
+                        </div>
+                    </li>
+                    <li>
+                        <div>
+                            <img src="images/people/mh.png" alt="">
+                        </div>
+                        <div>
+                            <div>
+                                <div>
+                                    <p>Muhammad Haroon</p>
+                                    <p>Postdoctoral Fellow</p>
+                                    <p>haroon@westlake.edu.cn</p>
+                                </div>
+                                <ul>
+                                    <li>Ph.D. King Fahd University Petroleum & Minerals, Saudi Arabia</li>
+                                    <li>M.Phil. Minhaj University Lahore, Pakistan</li>
+                                    <li>M.Sc. Minhaj University Lahore, Pakistan</li>
+                                </ul>
+                            </div>
+                            <div>My research Interests are Plasmonic nanomaterials, Drug interaction with nanomaterials,
+                                Biosensing, Surface Enhanced Vibrational spectroscopy (SERS, TERS), Bioimaging, Density
+                                Functional theory (DFT). My hobbies are Cricket, Volley ball, Music listening, Footbal.
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div>
+                            <img src="images/people/ms.png" alt="">
+                        </div>
+                        <div>
+                            <div>
+                                <div>
+                                    <p>Muhammad Sohail</p>
+                                    <p>Postdoctoral Fellow</p>
+                                    <p>sohail@westlake.edu.cn</p>
+                                </div>
+                                <ul>
+                                    <li>Ph.D. Forman Christian College (A Chartered University) Lahore, Pakistan</li>
+                                    <li>M.Phil. Forman Christian College (A Chartered University) Lahore, Pakistan</li>
+                                </ul>
+                            </div>
+                            <div>My research Interests are Micellar solutions, Electrolytes, Drug delivery systems,
+                                Spectroscopy, Rheology studies, Material characterization. My hobbies are Book reading,
+                                Cricket, Driving.</div>
+                        </div>
+                    </li>
+                    <li>
+                        <div>
+                            <img src="images/people/gzm.png" alt="">
+                        </div>
+                        <div>
+                            <div>
+                                <div>
+                                    <p>ZiMing Gao</p>
+                                    <p>Research Assistant</p>
+                                    <p>gaoziming@westlake.edu.cn</p>
+                                </div>
+                                <ul>
+                                    <li>M.S.B. Yunnan University, 2023</li>
+                                    <li>B.Sc. Tianjin Normal University, 2020</li>
+                                </ul>
+                            </div>
+                            <div>After graduation, I was engaged in the research of the theoretical chemical calculation
+                                of rare earth metal-organic in the School of Chemistry, Nankai University. My hobbies
+                                are swimming, hiking and writing. </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div>
+                            <img src="images/people/zhk.png" alt="">
+                        </div>
+                        <div>
+                            <div>
+                                <div>
+                                    <p>HuiKe Zhang</p>
+                                    <p>Postdoctoral Fellow</p>
+                                    <p>zhanghuike@westlake.edu.cn</p>
+                                </div>
+                                <ul>
+                                    <li>B.E. Yancheng Institute of Technology, Now</li>
+                                </ul>
+                            </div>
+                            <div>My research direction is the development of organic functional (optoelectronic)
+                                materials. My hobbies are learning audio technology and watching documentaries on marine
+                                life</div>
+                        </div>
+                    </li>
+                    <li>
+                        <div>
+                            <img src="images/people/hd.png" alt="">
+                        </div>
+                        <div>
+                            <div>
+                                <div>
+                                    <p>Dan Huang</p>
+                                    <p>Administrative Assistant</p>
+                                    <p>huangdan@westlake.edu.cn</p>
+                                </div>
+                                <ul>
+                                    <li>B.S. Zhengzhou Shengda University, 2016</li>
+                                </ul>
+                            </div>
+                            <div>Admire the scientists in our laboratory very much! Enjoy this administrative work!
+                                Outside of work, I like to do handicrafts</div>
+                        </div>
+                    </li>
+                </ul>
             </div>
-            <div>
-                <div>Hobbies</div>
-                <p>Besides scientific research, You Xiao like to play badminton, rock climbing, hiking and other outdoor sports</p>
-            </div>
-        </div>
-        <div class="current_member">
-            <div>Current Members</div>
-            <ul>
-                <li>
-                    <div>
-                        <img src="images/people/zyx.png" alt="">
-                    </div>
-                    <div>
-                        <div>
-                            <div>
-                                <p>YunXiu Zhao</p>
-                                <p>Postdoctoral Fellow</p>
-                                <p>zhaoyunxiu@westlake.edu.cn</p>
-                            </div>
-                            <ul>
-                                <li>Ph.D. Chungbuk National University, 2023</li>
-                                <li>M.S. China Three Gorges University, 2018</li>
-                                <li>B.S. Northwest Normal University, 2010</li>
-                            </ul>
-                        </div>
-                        <div>My main project is currently working on chiral biomolecular induced spin selective, I love watching movies, and reading books.</div>
-                    </div>
-                </li>
-                <li>
-                    <div>
-                        <img src="images/people/mh.png" alt="">
-                    </div>
-                    <div>
-                        <div>
-                            <div>
-                                <p>Muhammad Haroon</p>
-                                <p>Postdoctoral Fellow</p>
-                                <p>haroon@westlake.edu.cn</p>
-                            </div>
-                            <ul>
-                                <li>Ph.D. King Fahd University Petroleum & Minerals, Saudi Arabia</li>
-                                <li>M.Phil. Minhaj University Lahore, Pakistan</li>
-                                <li>M.Sc. Minhaj University Lahore, Pakistan</li>
-                            </ul>
-                        </div>
-                        <div>My research Interests are Plasmonic nanomaterials, Drug interaction with nanomaterials, Biosensing, Surface Enhanced Vibrational spectroscopy (SERS, TERS), Bioimaging, Density Functional theory (DFT). My hobbies are Cricket, Volley ball, Music listening, Footbal.</div>
-                    </div>
-                </li>
-                <li>
-                    <div>
-                        <img src="images/people/ms.png" alt="">
-                    </div>
-                    <div>
-                        <div>
-                            <div>
-                                <p>Muhammad Sohail</p>
-                                <p>Postdoctoral Fellow</p>
-                                <p>sohail@westlake.edu.cn</p>
-                            </div>
-                            <ul>
-                                <li>Ph.D. Forman Christian College (A Chartered University) Lahore, Pakistan</li>
-                                <li>M.Phil. Forman Christian College (A Chartered University) Lahore, Pakistan</li>
-                            </ul>
-                        </div>
-                        <div>My research Interests are Micellar solutions, Electrolytes, Drug delivery systems, Spectroscopy, Rheology studies, Material characterization. My hobbies are Book reading, Cricket, Driving.</div>
-                    </div>
-                </li>
-                <li>
-                    <div>
-                        <img src="images/people/gzm.png" alt="">
-                    </div>
-                    <div>
-                        <div>
-                            <div>
-                                <p>ZiMing Gao</p>
-                                <p>Research Assistant</p>
-                                <p>gaoziming@westlake.edu.cn</p>
-                            </div>
-                            <ul>
-                                <li>M.S.B. Yunnan University, 2023</li>
-                                <li>B.Sc. Tianjin Normal University, 2020</li>
-                            </ul>
-                        </div>
-                        <div>After graduation, I was engaged in the research of the theoretical chemical calculation of rare earth metal-organic in the School of Chemistry, Nankai University. My hobbies are swimming, hiking and writing. </div>
-                    </div>
-                </li>
-                <li>
-                    <div>
-                        <img src="images/people/zhk.png" alt="">
-                    </div>
-                    <div>
-                        <div>
-                            <div>
-                                <p>HuiKe Zhang</p>
-                                <p>Postdoctoral Fellow</p>
-                                <p>zhanghuike@westlake.edu.cn</p>
-                            </div>
-                            <ul>
-                                <li>B.E. Yancheng Institute of Technology, Now</li>
-                            </ul>
-                        </div>
-                        <div>My research direction is the development of organic functional (optoelectronic) materials. My hobbies are learning audio technology and watching documentaries on marine life</div>
-                    </div>
-                </li>
-                <li>
-                    <div>
-                        <img src="images/people/hd.png" alt="">
-                    </div>
-                    <div>
-                        <div>
-                            <div>
-                                <p>Dan Huang</p>
-                                <p>Administrative Assistant</p>
-                                <p>huangdan@westlake.edu.cn</p>
-                            </div>
-                            <ul>
-                                <li>B.S. Zhengzhou Shengda University, 2016</li>
-                            </ul>
-                        </div>
-                        <div>Admire the scientists in our laboratory very much! Enjoy this administrative work! Outside of work, I like to do handicrafts</div>
-                    </div>
-                </li>
-            </ul>
         </div>
     </div>
 
