--- a/researchList.html
+++ b/researchList.html
@@ -52,7 +52,7 @@
     </div>
 
     <div class="main">
-        <div class="researchList wrap_box">
+        <div class="researchList pt90 wrap_box">
             <div class="title_box">
                 <h3 class="title">Research Focuses</h3>
                 <div>Our focus is on unraveling the mysteries of surface structures of liquids.</div>
